--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/server.ts",
     "build": "tsc && tsc-alias",
     "lint": "eslint src/**/*.ts",
-    "fix": "eslint src/**/*.ts --fix"
+    "fix": "eslint src/**/*.ts --fix",
+    "seed": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/helpers/seed.ts"
   },
   "keywords": [],
   "author": "nasim",
