--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "multer": "^2.0.2",
     "nodemailer": "^7.0.11",
     "openai": "^6.9.1",
+    "pdfkit": "^0.17.2",
     "stripe": "^20.0.0",
     "zod": "^4.1.13"
   },
@@ -46,6 +47,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.10.1",
     "@types/nodemailer": "^7.0.4",
+    "@types/pdfkit": "^0.17.4",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "globals": "^16.5.0",
