--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build": "tsc && tsc-alias",
     "lint": "eslint src/**/*.ts",
     "fix": "eslint src/**/*.ts --fix",
-    "seed": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/helpers/seed.ts","db:generate": "prisma generate --schema=./prisma/schema",
+    "seed": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/helpers/seed.ts",
+    "db:generate": "prisma generate --schema=./prisma/schema",
     "db:migrate": "prisma migrate --schema=./prisma/schema",
     "db:push": "prisma db push --schema=./prisma/schema",
     "db:pull": "prisma db pull --schema=./prisma/schema",
