update start command

--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./dist/server.js",
+    "start": "npx prisma migrate deploy && node ./dist/server.js",
     "dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/server.ts",
     "build": "tsc && tsc-alias",
     "lint": "eslint src/**/*.ts",
     "fix": "eslint src/**/*.ts --fix",
-    "seed": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/helpers/seed.ts","db:generate": "prisma generate --schema=./prisma/schema",
+    "seed": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/helpers/seed.ts",
+    "db:generate": "prisma generate --schema=./prisma/schema",
     "db:migrate": "prisma migrate --schema=./prisma/schema",
     "db:push": "prisma db push --schema=./prisma/schema",
     "db:pull": "prisma db pull --schema=./prisma/schema",
