--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,9 @@
 NODE_ENV=development
 PORT=5000
 DATABASE_URL=postgresql://user:password@localhost:5432/tourify_db
+DIRECT_URL=postgresql://user:password@localhost:5432/tourify_db # Required for migrations (Supabase Session Pooler)
 CLIENT_URL=http://localhost:3000
+SERVER_URL=http://localhost:5000 # Backend URL (Render Deployment URL)
 
 # JWT Configuration
 JWT_SECRET=your_jwt_secret_key_here_should_be_long_and_random
