--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "nodemailer": "^7.0.11",
     "openai": "^6.9.1",
     "pdfkit": "^0.17.2",
+    "resend": "^6.6.0",
     "stripe": "^20.0.0",
     "zod": "^4.1.13"
   },
